[project]
name = "light-cache"
version = "1.0.0"
description = "A simple, lightweight caching library for disk-based or object-based caching"
keywords = [ "cache" ]
authors = [
    {name = "Frank Corso",email = "frank@frankcorso.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
repository = "https://github.com/fpcorso/light-cache"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

